# keylay

./: .gitignore  README.md  pyproject.toml
resources/public/: common.css  complex.html  simple.html
src/keylay/: __init__.py  apk_builder.py  cli.py  layouts.py  server.py
tests/: test_apk_builder.py  test_layouts.py  test_server.py
