[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keylay"]

[project]
name = "keylay"
version = "0.1.0"
description = "Generate custom Android keyboard layout APKs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "cryptography>=42.0",
]

[project.scripts]
keylay = "keylay.cli:main"

[dependency-groups]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
